[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/buttons/zoomInButton.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons/chatButton.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/buttons/zoomOutButton.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/HUD.gd" type="Script" id=4]
[ext_resource path="res://ui/inventory/Inventory.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=6]
[ext_resource path="res://ui/inventory/ItemSlot.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/crafting/CraftButton.gd" type="Script" id=8]
[ext_resource path="res://ui/crafting/CraftingContainer.gd" type="Script" id=9]
[ext_resource path="res://item/Item.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "loading"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "...", "·..", ".·.", "..·" ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -34.0
margin_right = 112.0
margin_bottom = 6.0

[node name="ChatButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )

[node name="ZoomInButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )

[node name="ZoomOutButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )

[node name="Inventory" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 5 )

[node name="InventoryBackdrop" type="ColorRect" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/HBoxContainer"]
margin_left = 311.0
margin_right = 713.0
margin_bottom = 600.0
mouse_filter = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Inventory/HBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 402.0
margin_bottom = 433.0
rect_min_size = Vector2( 400, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 395.0
margin_bottom = 260.0
mouse_filter = 2

[node name="UpperInventory" type="HBoxContainer" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 45.0
mouse_filter = 2
alignment = 2

[node name="CraftingContainer" type="HBoxContainer" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 45.0
mouse_filter = 2
script = ExtResource( 9 )

[node name="Ingredient1ItemSlot" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer" instance=ExtResource( 7 )]
margin_right = 45.0
is_crafting_slot = true

[node name="Ingredient2ItemSlot" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer" instance=ExtResource( 7 )]
margin_left = 49.0
margin_right = 94.0
is_crafting_slot = true

[node name="CraftButton" type="Button" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 45.0
rect_min_size = Vector2( 94, 0 )
text = "..."
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton"]
anims/RESET = SubResource( 1 )
anims/loading = SubResource( 2 )

[node name="PreviewItem" type="Control" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton"]
margin_left = 47.0
margin_top = 1.0
margin_right = 79.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 38 )
mouse_filter = 1

[node name="Item" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton/PreviewItem" instance=ExtResource( 10 )]
position = Vector2( -2, -2 )

[node name="Margin" type="Control" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 388.0
margin_bottom = 53.0

[node name="ItemsGrid" type="GridContainer" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 388.0
margin_bottom = 253.0
mouse_filter = 2
columns = 8

[node name="ItemSlot" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_right = 45.0

[node name="ItemSlot2" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 49.0
margin_right = 94.0

[node name="ItemSlot3" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 98.0
margin_right = 143.0

[node name="ItemSlot4" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 147.0
margin_right = 192.0

[node name="ItemSlot5" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 196.0
margin_right = 241.0

[node name="ItemSlot6" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 245.0
margin_right = 290.0

[node name="ItemSlot7" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 294.0
margin_right = 339.0

[node name="ItemSlot8" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 343.0
margin_right = 388.0

[node name="ItemSlot9" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_top = 49.0
margin_right = 45.0
margin_bottom = 94.0

[node name="ItemSlot10" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 49.0
margin_top = 49.0
margin_right = 94.0
margin_bottom = 94.0

[node name="ItemSlot11" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 98.0
margin_top = 49.0
margin_right = 143.0
margin_bottom = 94.0

[node name="ItemSlot12" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 147.0
margin_top = 49.0
margin_right = 192.0
margin_bottom = 94.0

[node name="ItemSlot13" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 196.0
margin_top = 49.0
margin_right = 241.0
margin_bottom = 94.0

[node name="ItemSlot14" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 245.0
margin_top = 49.0
margin_right = 290.0
margin_bottom = 94.0

[node name="ItemSlot15" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 294.0
margin_top = 49.0
margin_right = 339.0
margin_bottom = 94.0

[node name="ItemSlot16" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 343.0
margin_top = 49.0
margin_right = 388.0
margin_bottom = 94.0

[node name="ItemSlot17" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_top = 98.0
margin_right = 45.0
margin_bottom = 143.0

[node name="ItemSlot18" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 49.0
margin_top = 98.0
margin_right = 94.0
margin_bottom = 143.0

[node name="ItemSlot19" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 98.0
margin_top = 98.0
margin_right = 143.0
margin_bottom = 143.0

[node name="ItemSlot20" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 147.0
margin_top = 98.0
margin_right = 192.0
margin_bottom = 143.0

[node name="ItemSlot21" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 196.0
margin_top = 98.0
margin_right = 241.0
margin_bottom = 143.0

[node name="ItemSlot22" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 245.0
margin_top = 98.0
margin_right = 290.0
margin_bottom = 143.0

[node name="ItemSlot23" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 294.0
margin_top = 98.0
margin_right = 339.0
margin_bottom = 143.0

[node name="ItemSlot24" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 343.0
margin_top = 98.0
margin_right = 388.0
margin_bottom = 143.0

[node name="ItemSlot25" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_top = 147.0
margin_right = 45.0
margin_bottom = 192.0

[node name="ItemSlot26" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 49.0
margin_top = 147.0
margin_right = 94.0
margin_bottom = 192.0

[node name="ItemSlot27" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 98.0
margin_top = 147.0
margin_right = 143.0
margin_bottom = 192.0

[node name="ItemSlot28" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 147.0
margin_top = 147.0
margin_right = 192.0
margin_bottom = 192.0

[node name="ItemSlot29" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 196.0
margin_top = 147.0
margin_right = 241.0
margin_bottom = 192.0

[node name="ItemSlot30" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 245.0
margin_top = 147.0
margin_right = 290.0
margin_bottom = 192.0

[node name="ItemSlot31" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 294.0
margin_top = 147.0
margin_right = 339.0
margin_bottom = 192.0

[node name="ItemSlot32" parent="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ItemsGrid" instance=ExtResource( 7 )]
margin_left = 343.0
margin_top = 147.0
margin_right = 388.0
margin_bottom = 192.0

[connection signal="pressed" from="HBoxContainer/ChatButton" to="." method="_on_ChatButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ZoomInButton" to="." method="_on_ZoomInButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ZoomOutButton" to="." method="_on_ZoomOutButton_pressed"]
[connection signal="pressed" from="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton" to="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer" method="_on_CraftButton_pressed"]
[connection signal="pressed" from="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton" to="Inventory/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/UpperInventory/CraftingContainer/CraftButton" method="_on_CraftButton_pressed"]
